# FosterML

./: .clang-format  .gitignore  README.md  plan.md
docs/: Doxyfile  Home.md
docs/html/: Matrix_8hpp.html  Matrix_8hpp.js  Matrix_8hpp_source.html  Matrix_8tpp.html  Matrix_8tpp_source.html  annotated.html  classMatrix-members.html  classMatrix.html  classMatrix.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js
include/: .clang-format  AutoDiffEngine.hpp  Matrix.h  Matrix.hpp  Matrix.tpp  Tensor.hpp  Tensor.tpp
include/core/: AutoDiffEngine.hpp
lessons/01 - Matrix/: matrix  matrix.cpp  matrix.h  matrix_lesson.cpp  vector_lesson.cpp
lessons/02 - Activations/: activations.h
lessons/02 - Tensor/: AutoDiffEngine.hpp  Tensor.hpp  Tensor.tpp  a.out  pytorch_testing.py  test  test.cpp
lessons/theory/: Tensors.md  blog_topics.md
testing/: CMakeLists.txt
testing/01 - Matrix/: matrix.cpp  matrix.h
testing/01_Matrix/: matrix_lesson.cpp
testing/02 - Tensor/: AutoDiffEngine.hpp  Tensor.hpp  test.cpp
testing/02_Tensor/: a.out  main.cpp
testing/04 - Regression/: LinearRegression.hpp  LinearRegression.tpp
testing/04_Data_sets/: DataLoader.hpp  Dataset.hpp
testing/05_Regression/: LinearRegression.hpp  LinearRegression.tpp  LossFunctions.hpp
theory/: Tensor Understaning and Implementation.html  blog_topics.md  linear_regression.md  parial_derivatives.md
theory/manimations/: build.sh
(+48 files in other folders)
